<resources>
    <string name="app_name">Clasificados.com</string>
    <string name="action_settings">Configuracion</string>

    <string name="nav_inicio">Inicio</string>
    <string name="nav_publicaciones">Mis publicaciones</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_mensajes">Mensajes</string>
    <string name="nav_categorias">Categorias</string>
    <string name="nav_facebook">Compartir en Facebook</string>
    <string name="terminos_cond">Al registrarme acepto los <font color='#F8672f'>Terminos</font> y <font color='#F8672f'>Condiciones</font></string>

    <string name="titulo_tab_vehiculos">Vehiculos</string>
    <string name="titulo_tab_inmuebles">Inmuebles</string>
    <string name="titulo_tab_productos">Productos</string>
    <string name="titulo_tab_empleos">Empleos</string>
    <string name="titulo_tab_servicios">Servicios</string>

    <string name="lorem_short">Lorem Ipsum</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</string>
    <string name="reportar_anuncio">Reportar este anuncio</string>
    <string name="contactar">Contactar</string>
    <string name="ofertar">Ofertar</string>


    <string name="title_activity_single">Autos Usados</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="title_activity_registro_usuario">Crear Cuenta</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_cuenta">No tengo una cuenta, crearla</string>

    <string name="registrarme">Registrar mi cuenta</string>
    <string name="exito_registro">Registro Exitoso</string>
    <string name="sub_exito_registro">Ahora puedes iniciar sesion</string>
    <string name="mi_cuenta">Mi Cuenta</string>

    <string name="attachment_menu_camera">Camera</string>
    <string name="attachment_menu_gallery">Gallery</string>
    <string name="attachment_menu_location">Location</string>
    <string name="title_select_conversation">New Message</string>
    <string name="push_notification_no_content_title">New message (tap to sync)</string>

    <string name="activity_base_alert_message_error">Ha ocurrido un error, Por favor intente de nuevo</string>
    <string name="activity_base_alert_message_network_exception">Compruebe su conexión a Internet.</string>
    <string name="activity_base_alert_message_parsing_exception">Mensaje incorrecto de server.Please inténtalo de nuevo</string>
    <string name="activity_base_alert_message_timeout_exception">El servidor no responde. Por favor, inténtalo de nuevo</string>


    <!-- String for Server Exception Class -->
    <string name="server_exception_error_message_general">Error en el servidor</string>
    <string name="server_exception_error_message_server_error">Error interno en el servidor</string>
    <string name="server_exception_error_message_resource_not_found">Recurso solicitado no existe en el servidor</string>
    <string name="server_exception_error_message_forbidden">Error en el servidor</string>
    <string name="error">Error</string>
    <string name="reg_success">Registered Successfully..</string>
    <string name="lista" />
    <string name="o_cuenta">O con tu cuenta</string>
    <string name="us_o_e">Usuario o Email</string>
    <string name="login_fb">Ingresar con Facebook</string>
    <string name="password">Contraseña</string>
    <string name="olvidar">Olvidé mi contraseña</string>
    <string name="ingresar_cuenta">Ingresar a Cuenta</string>
    <string name="o_datos">O llena los datos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Correo electronico</string>
    <string name="nombre_user">Nombre de usuario</string>
    <string name="contra2">Repetir contraseña</string>
    <string name="precio">Q4,950.99</string>
    <string name="titulo_anuncio">Chevrolet Tahoe LS, 4x4, modelo 2007 de Agencia, Un Dueño</string>
    <string name="distancia">Kilometro 18.5 Carretera a Fraijanes, Guatemala, Guatemala</string>
    <string name="share">Compartir clasificado</string>
    <string name="title_activity_publicar">Publicar Clasificado</string>
    <string name="clean">Limpiar</string>
    <string name="titulo">Titulo</string>
    <string name="costo">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="fotografias">Fotografias</string>
    <string name="publicar_mi">Publicar mi clasificado</string>
    <string name="error_incorrect_password">Error contraseña incorrecta</string>
    <string name="error_invalid_email">No existe usuario con este registro</string>
    <string name="no_coinciden">Contraseñas no coinciden</string>
    <string name="no_vacios">Campos vacios</string>
    <string name="moneda">Q.</string>
    <string name="debes">Debes iniciar sesion, para accesar a este contenido.</string>
    <string name="title_activity_logout">Logout</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="cat1">Carros</string>
    <string name="cat2">Motos</string>
    <string name="cat3">Otros Vehiculos</string>
    <string name="filtro">Filtrar</string>
    <string name="cargando">Cargando</string>
    <string name="creado">Registro exitoso</string>
    <string name="select_moneda">Seleccione una moneda</string>
    <string name="fotografia">Fotografia</string>
    <string name="title_activity_mensaje">Mensajes</string>
    <string name="title_activity_main">Main</string>
    <string name="install_wha">Debes tener Whatsapp instalado.</string>
    <string name="install_mesg">Debes tener Facebook Messenger instalado.</string>
    <string name="send_to">Compartir en</string>
    <string name="enviar_oferta">Envia una oferta para empezar una negociacion</string>
    <string name="ultimos">Ultimos Clasificados</string>
    <string name="adistancia">A 50 metros de ti</string>
    <string name="share_onfb">Compartir clasificado en facebook.</string>
    <string name="aceptar">Aceptar</string>
    <string name="nav_archivar">Archivar</string>
    <string name="selecc">Seleccione una opcion</string>
    <string name="title_activity_modificar">Modificar</string>
    <string name="modificar_mi">Modificar mi clasificadao</string>
    <string name="buscar_prod">Buscar productos</string>
    <string name="cat4">Alquiler</string>
    <string name="cat5">Proyectos</string>
    <string name="cat6">En Venta</string>
    <string name="select_cat">Debe seleccionar una categoria.</string>
    <string name="select_sub">Debe seleccionar una Subcategoria.</string>
    <string name="sel">Seleccionar</string>
    <string name="title_activity_custom_photo_gallery">CustomPhotoGallery</string>
    <string name="sele_del">Debe seleccionar al menos una foto para eliminar</string>
    <string name="no_foto">No hay fotos a eliminar</string>
    <string name="title_activity_mi_mensaje">MiMensaje</string>
    <string name="escribe">Escribe tu mensaje</string>
    <string name="alert_message_delete_conversation">¿Eliminar Conversacion?</string>
    <string name="alert_button_cancel">Cancelar</string>
    <string name="alert_button_delete_all_participants">Eliminar a los participantes</string>
    <string name="alert_button_delete_my_devices">Eliminar mis dispositivos</string>
    <string name="alert_message_delete_message">Eliminar mensaje</string>
    <string name="notifications_num_more">+%1$d más</string>
    <string name="notifications_new_messages">%1$s mensajes nuevos</string>
    <string name="alert_message_resuming">Retomando Sesion</string>
    <string name="vacio" />


</resources>
