<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:checked="true"
            android:icon="@drawable/inicio"
            android:title="@string/nav_inicio" />
        <item
            android:id="@+id/item_publicaciones"
            android:icon="@drawable/my"
            android:title="@string/nav_publicaciones" />
        <item
            android:id="@+id/item_favoritos"
            android:icon="@drawable/favoritos"
            android:title="@string/nav_favoritos" />
        <item
            android:id="@+id/item_mensajes"
            android:icon="@drawable/mensajes"
            android:title="@string/nav_mensajes" />
        <item
            android:id="@+id/item_categorias"
            android:icon="@drawable/categorias"
            android:title="@string/nav_categorias" />
        <item
            android:id="@+id/item_configuracion"
            android:icon="@drawable/configuracion"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/item_sharefb"
            android:icon="@drawable/ic_facebook"
            android:title="@string/nav_facebook" />
    </group>
</menu>