<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

<RelativeLayout
android:layout_width="match_parent"
android:layout_height="550dp">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="125dp"
                    android:src="@drawable/header_login"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                    <and.clasificados.com.views.EditTextLight
                        android:id="@+id/user"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/us_o_e"
                        android:background="@drawable/rounded_etext"
                        android:layout_below="@+id/button_fb"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_fb"
        android:src="@drawable/fb_login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/login_divider"
        android:layout_alignBottom="@+id/user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />

    <and.clasificados.com.views.TextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_cuenta"
        android:id="@+id/textView6"
        android:textColor="#cccccc"
        android:layout_alignTop="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <and.clasificados.com.views.TextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_fb"
        android:id="@+id/textView7"
        android:textColor="#FFFFFF"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/logo"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <and.clasificados.com.views.EditTextLight
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:id="@+id/editText"
        android:layout_below="@+id/user"
        android:layout_alignLeft="@+id/user"
        android:layout_alignStart="@+id/user"
        android:hint="@string/password"
        android:layout_marginTop="18dp"
        android:layout_alignRight="@+id/user"
        android:layout_alignEnd="@+id/user"
        android:background="@drawable/rounded_etext"
        android:inputType="textPassword"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/button_session"
        android:src="@drawable/button_login"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <and.clasificados.com.views.TextViewLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidar"
        android:id="@+id/olvide"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_alignTop="@+id/button_session"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView9"
        android:layout_below="@+id/olvide"
        android:layout_alignLeft="@+id/olvide"
        android:layout_alignStart="@+id/olvide"
        android:src="@drawable/login_forgot"
        android:layout_alignRight="@+id/olvide"
        android:layout_alignEnd="@+id/olvide" />

    <and.clasificados.com.views.TextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:id="@+id/textView9"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_alignBottom="@+id/imageView9"
        android:layout_alignRight="@+id/button_fb"
        android:layout_alignEnd="@+id/button_fb" />

    <and.clasificados.com.views.ButtonLight
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/no_cuenta"
        android:id="@+id/button_registro"
        android:background="@drawable/rounded_etext"
        android:layout_below="@+id/button_session"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

</RelativeLayout>
</ScrollView>