<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">

    <and.clasificados.com.views.TextViewLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enviar_oferta"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"/>

    <CheckBox
        android:id="@+id/checkbox_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_onfb"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:layout_alignment="center"
        android:textAlignment="center"/>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <and.clasificados.com.views.ButtonLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/button_dialog"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button_orange"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/send_icon"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button_dialog"
        android:layout_alignEnd="@+id/button_dialog"
        android:layout_alignBottom="@+id/button_dialog" />


</RelativeLayout>
</LinearLayout>