<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filtro_vehiculos"
    android:visibility="invisible"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingRight="@dimen/espacio_norma_1"
    android:paddingLeft="@dimen/espacio_norma_1"
    android:paddingTop="@dimen/espacio_norma_1"
    android:background="#ffffff"
    android:paddingBottom="@dimen/espacio_norma_1">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout5"
        android:layout_centerHorizontal="true">

        <and.clasificados.com.views.ButtonLight
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/cat1"
            android:id="@+id/button2"
            android:padding="4dp"
            android:textColor="@drawable/state"
            android:layout_column="1"
            android:background="@drawable/button_state"/>

        <and.clasificados.com.views.ButtonLight
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/cat2"
            android:padding="4dp"
            android:id="@+id/button"
            android:textColor="@drawable/state"
            android:layout_column="2"
            android:background="@drawable/button_state"
            />

        <and.clasificados.com.views.ButtonLight
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/cat3"
            android:padding="4dp"
            android:id="@+id/button3"
            android:textColor="@drawable/state"
            android:layout_column="0"
            android:background="@drawable/button_state"/>
    </GridLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_below="@+id/gridLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="4dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:id="@+id/spinner4"
        android:layout_below="@+id/spinner3"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner5"
        android:padding="4dp"
        android:layout_below="@+id/spinner4"
        android:layout_alignRight="@+id/spinner4"
        android:layout_alignEnd="@+id/spinner4" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/spinner5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_column="0"
            android:padding="2dp"
            android:background="@drawable/rounded_etext"
            android:src="@drawable/recharge"/>

        <and.clasificados.com.views.ButtonLight
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/filtro"
            android:id="@+id/filtrado"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_button_pressed"
            android:layout_column="1"/>
    </GridLayout>

</RelativeLayout>